// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnToggle > rendering > matches snapshot for single column 1`] = `
"<div class="items-center gap-1 p-0.5" role="radiogroup" aria-label="Column layout"><button class="border-none rounded-sm bg-transparent text-primary opacity-40 cursor-pointer transition-all hover:text-primary !opacity-100" role="radio" aria-checked="true" aria-label="Single column layout">
    <!-- https://lucide.dev/icons/square--><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-icon lucide-square">
      <rect width="18" height="18" x="3" y="3" rx="2"></rect>
    </svg>
  </button><button class="border-none rounded-sm bg-transparent text-primary opacity-40 cursor-pointer transition-all hover:text-primary" role="radio" aria-checked="false" aria-label="Two column layout">
    <!--https://lucide.dev/icons/columns-2--><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-columns2-icon lucide-columns-2">
      <rect width="18" height="18" x="3" y="3" rx="2"></rect>
      <path d="M12 3v18"></path>
    </svg>
  </button></div>"
`;

exports[`ColumnToggle > rendering > matches snapshot for two columns 1`] = `
"<div class="items-center gap-1 p-0.5" role="radiogroup" aria-label="Column layout"><button class="border-none rounded-sm bg-transparent text-primary opacity-40 cursor-pointer transition-all hover:text-primary" role="radio" aria-checked="false" aria-label="Single column layout">
    <!-- https://lucide.dev/icons/square--><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-icon lucide-square">
      <rect width="18" height="18" x="3" y="3" rx="2"></rect>
    </svg>
  </button><button class="border-none rounded-sm bg-transparent text-primary opacity-40 cursor-pointer transition-all hover:text-primary !opacity-100" role="radio" aria-checked="true" aria-label="Two column layout">
    <!--https://lucide.dev/icons/columns-2--><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-columns2-icon lucide-columns-2">
      <rect width="18" height="18" x="3" y="3" rx="2"></rect>
      <path d="M12 3v18"></path>
    </svg>
  </button></div>"
`;
